fix hraftd client into using HttpURLConnection